# Vortex-Bot

./: .breakpoints  .gitignore  .replit  events.py  keep_alive.py  loot.py  loot_table.py  main.py  pyproject.toml  replies.py  requirements.txt
cogs/: admin_eco.py  anime.py  boss.py  bot_startup.py  colours.py  dev.py  economy.py  event.py  events.py  fun.py  funcmds.py  games.py  general.py  help.py  images.py  income.py  index.py  levels.py  marriage.py  misc.py  moderation.py  npcs.py  on_message.py  shop.py  support.py
cogs/__pycache__/: boss.cpython-38.pyc.140307528772608
cogs/utils/: loot.py  replies.py  utils_dict.py  weapons.py
